--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ img {
 
 .card-head {
   width: 100%;
-  height: 300px;
+  height: 200px;
   overflow: hidden;
 }
 
@@ -346,6 +346,10 @@ img {
   .products-content {
     display: grid;
     grid-template-columns: repeat(3, minmax(200px, 1fr));
+  }
+
+  .card-head {
+    height: 300px;
   }
 
   .card-body {
